Implement multipage format with collapsible nav and search, and add ON and West Berkshire Council APIs

--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -11,21 +11,21 @@ phase: Alpha
 header_links:
 
 # Enables search functionality. This indexes pages only and is not recommended for single-page sites.
-enable_search: false
+enable_search: true
 
 # Tracking ID from Google Analytics (e.g. UA-XXXX-Y)
 ga_tracking_id:
 
 # Enable multipage navigation in the sidebar
-multipage_nav: false
+multipage_nav: true
 
 # Enable collapsible navigation in the sidebar
-collapsible_nav: false
+collapsible_nav: true
 
 # Table of contents depth – how many levels to include in the table of contents.
 # If your ToC is too long, reduce this number and we'll only show higher-level
 # headings.
-max_toc_heading_level: 6
+max_toc_heading_level: 2
 
 # Prevent robots from indexing (e.g. whilst in development)
 prevent_indexing: false
